--- a/packages/client/src/components/ui/Input/index.module.scss
+++ b/packages/client/src/components/ui/Input/index.module.scss
@@ -1,5 +1,5 @@
-@use "../../_vars" as *;
-@use "../../_mixins/" as *;
+@use "../../../styles/vars" as *;
+@use "../../../styles/_mixins/" as *;
 
 .input {
   display: block;
