--- a/packages/client/src/components/CatalogView/index.module.scss
+++ b/packages/client/src/components/CatalogView/index.module.scss
@@ -1,4 +1,28 @@
+@use "../..//styles/_vars.scss" as *;
+@use "../../styles/mixins" as *;
+
 .list {
+  @include grid;
+  @include gridColumn;
+
   .item {
+    position: relative;
+    width: 100%;
+
+    .link {
+      @include link;
+    }
+  }
+
+  .wrap {
+    @include flex;
+    @include flexColumn;
+
+    .wrapImage {
+      position: relative;
+      padding-bottom: 50%;
+      border: 1px solid $black;
+      border-radius: $borderRadiusSmall;
+    }
   }
 }
