--- a/packages/client/src/components/ui/Informer/index.module.scss
+++ b/packages/client/src/components/ui/Informer/index.module.scss
@@ -1,5 +1,5 @@
-@use "../../vars" as *;
-@use "../../_mixins" as *;
+@use "../../../styles/vars" as *;
+@use "../../../styles/_mixins" as *;
 
 .informer {
   padding: $paddingMiddle;
