--- a/packages/client/src/styles/_mixins.scss
+++ b/packages/client/src/styles/_mixins.scss
@@ -4,7 +4,6 @@
 @mixin link($color: $black, $hoverColor: $grey) {
   color: $color;
   transition: color 200ms ease;
-  width: 100%;
   height: 100%;
 
   &:before {
@@ -14,6 +13,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 10;
   }
 
   &:hover,
@@ -47,21 +47,27 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: stretch;
-  height: 100%;
 }
 
 @mixin flexRow {
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: stretch;
   align-items: flex-start;
-  height: 100%;
+}
+
+@mixin grid {
+  display: grid;
+  gap: 5px;
+  align-items: start;
+}
+
+@mixin gridColumn {
+  grid-template-columns: 1fr 1fr;
 }
 
 @mixin width {
-  @include media($breakpointMin900) {
-    width: 33.3333%;
-  }
+  width: 33vw;
 }
 
 @mixin button {
@@ -87,4 +93,18 @@
     background-color: #929292;
     pointer-events: none;
   }
+}
+
+@mixin hidden {
+  visibility: hidden;
+  opacity: 0.5;
+  transform: translateX(-100%);
+  transition: 0.3s ease-out;
+}
+
+@mixin visible {
+  visibility: visible;
+  opacity: 1;
+  transform: translateX(0);
+  transition: 0.3s ease-out;
 }
