--- a/packages/client/src/components/Layout/index.module.scss
+++ b/packages/client/src/components/Layout/index.module.scss
@@ -22,6 +22,7 @@
     padding-top: 60px;
     height: 100%;
     overflow: auto;
+    min-height: 100vh;
   }
 
   .footer {
@@ -32,5 +33,6 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 9999;
   }
 }
