--- a/packages/client/src/components/Menu/index.module.scss
+++ b/packages/client/src/components/Menu/index.module.scss
@@ -5,12 +5,11 @@
 .navigation {
   display: block;
   position: absolute;
-  top: 50px;
+  top: 49px;
   left: -1px;
   height: auto;
-  border-right: 1px solid $black;
-  border-bottom: 1px solid $black;
   background-color: $white;
+  box-shadow: 0 0 10px $grey;
   @include hidden;
 
   &.open {
@@ -27,7 +26,7 @@
       padding: 10px 30px;
 
       &:not(:first-child) {
-        border-top: 1px solid $black;
+        border-top: 2px solid $grey;
       }
 
       .link {
