--- a/packages/client/src/pages/MainPage/index.module.scss
+++ b/packages/client/src/pages/MainPage/index.module.scss
@@ -1,6 +1,20 @@
+@use "../../../../../node_modules/include-media/dist/_include-media" as *;
 @use "../../styles/mixins" as *;
 @use "../../styles/vars";
 
 .title {
   @include h1;
+  visibility: hidden;
+}
+
+.image {
+  width: 100%;
+  max-width: 100vw;
+  // height: 50vh;
+}
+
+.catalog {
+  @include flex;
+  @include flexRow;
+  flex-wrap: nowrap;
 }
