State manager add hookes state search modal

--- a/packages/client/src/components/Layout/index.module.scss
+++ b/packages/client/src/components/Layout/index.module.scss
@@ -18,8 +18,8 @@
   }
 
   .content {
-    padding: 20px 30px;
-    padding-top: 60px;
+    padding: 10px;
+    padding-top: 100px;
     height: 100%;
     overflow: auto;
     min-height: 100vh;
