--- a/packages/client/src/components/Header/index.module.scss
+++ b/packages/client/src/components/Header/index.module.scss
@@ -11,6 +11,7 @@
   box-shadow: 0 0 4px #bdbdbd;
   flex-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
 
   .logo {
     position: relative;
