--- a/packages/client/src/components/ui/Field/index.module.scss
+++ b/packages/client/src/components/ui/Field/index.module.scss
@@ -1,3 +1,4 @@
+@use "../../../../../../node_modules/include-media/dist/_include-media" as *;
 @use "../../../styles/vars" as *;
 @use "../../../styles/_mixins/" as *;
 
@@ -10,6 +11,12 @@
     display: block;
     margin-bottom: 4px;
     font-weight: bold;
+
+    &.hidden {
+      @include hidden;
+      height: 0;
+      width: 0;
+    }
   }
 
   .error {
